# canctool

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  README_ZH.md  config.py  docker-compose.yml  llm_service.py  main.py  models.py  prompt_engineering.py  providers_config.json.example  pyproject.toml  response_formatter.py  setup.py  test_client.py
canctool/: __init__.py  config.py  llm_service.py  models.py  prompt_engineering.py  response_formatter.py  simple_streamer.py  token_streamer.py
tests/: __init__.py  test_api.py  test_config.py
